maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:21: error: not found: value pox
  if  (!aMurOuest(x,y) && pox!=0){suivant(pox-1,poy,i+1)}
                          ^JediEscaper:21: error: not found: value pox
  if  (!aMurOuest(x,y) && pox!=0){suivant(pox-1,poy,i+1)}
                                          ^JediEscaper:21: error: not found: value poy
  if  (!aMurOuest(x,y) && pox!=0){suivant(pox-1,poy,i+1)}
                                                ^JediEscaper:22: error: not found: value pox
  else if (!aMurOuest(x+1,y) && pox!=getMondeLargeur()-1){suivant(pox+1,poy,i+1)}
                                ^JediEscaper:22: error: not found: value pox
  else if (!aMurOuest(x+1,y) && pox!=getMondeLargeur()-1){suivant(pox+1,poy,i+1)}
                                                                  ^JediEscaper:22: error: not found: value poy
  else if (!aMurOuest(x+1,y) && pox!=getMondeLargeur()-1){suivant(pox+1,poy,i+1)}
                                                                        ^JediEscaper:23: error: not found: value pox
  else if (!aMurNord(pox,poy+1) && poy==getMondeHauteur()-1){suivant(pox,poy+1,i+1)}
                     ^JediEscaper:23: error: not found: value poy
  else if (!aMurNord(pox,poy+1) && poy==getMondeHauteur()-1){suivant(pox,poy+1,i+1)}
                         ^JediEscaper:23: error: not found: value poy
  else if (!aMurNord(pox,poy+1) && poy==getMondeHauteur()-1){suivant(pox,poy+1,i+1)}
                                   ^JediEscaper:23: error: not found: value pox
  else if (!aMurNord(pox,poy+1) && poy==getMondeHauteur()-1){suivant(pox,poy+1,i+1)}
                                                                     ^JediEscaper:23: error: not found: value poy
  else if (!aMurNord(pox,poy+1) && poy==getMondeHauteur()-1){suivant(pox,poy+1,i+1)}
                                                                         ^JediEscaper:24: error: not found: value pox
  else if (!aMurNord(pox,poy) && poy==0){suivant(pox,poy-1,i+1)}
                     ^JediEscaper:24: error: not found: value poy
  else if (!aMurNord(pox,poy) && poy==0){suivant(pox,poy-1,i+1)}
                         ^JediEscaper:24: error: not found: value poy
  else if (!aMurNord(pox,poy) && poy==0){suivant(pox,poy-1,i+1)}
                                 ^JediEscaper:24: error: not found: value pox
  else if (!aMurNord(pox,poy) && poy==0){suivant(pox,poy-1,i+1)}
                                                 ^JediEscaper:24: error: not found: value poy
  else if (!aMurNord(pox,poy) && poy==0){suivant(pox,poy-1,i+1)}
                                                     ^