maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run(){
  reperage()
}
def reperage(){
  var pox=0
  var poy=0
  for (x<-0 to getMondeLargeur()-1){
  	for (y<-0 to getMondeHauteur()-1){
      if (aBiscuit(x,y)==true){
        	pox=x
        	poy=y
      }
    }
  }
  suivant(pox,poy,0)
}

def suivant(x:Int,y:Int,i:Int){
  setIndication(x,y,i)
  if  (!aMurOuest(x,y) && pox!=0){suivant(pox-1,poy,i+1)}
  else if (!aMurOuest(x+1,y) && pox!=getMondeLargeur()-1){suivant(pox+1,poy,i+1)}
  else if (!aMurNord(pox,poy+1) && poy==getMondeHauteur()-1){suivant(pox,poy+1,i+1)}
  else if (!aMurNord(pox,poy) && poy==0){suivant(pox,poy-1,i+1)}
}